Simplify the API