@@ -1,19 +1,14 @@
-// src/test/java/io/github/habedi/mvhnsw/index/MultiVectorHNSWTest.java
 package io.github.habedi.mvhnsw.index;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import io.github.habedi.mvhnsw.common.FloatVector;
+import io.github.habedi.mvhnsw.distance.Cosine;
 import io.github.habedi.mvhnsw.distance.Euclidean;
-import io.github.habedi.mvhnsw.distance.MultiVectorDistance;
-import io.github.habedi.mvhnsw.distance.WeightedAverageDistance;
 import java.io.File;
 import java.io.IOException;
-import java.io.Serial;
-import java.io.Serializable;
 import java.nio.file.Files;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -22,45 +17,40 @@ import org.junit.jupiter.api.io.TempDir;
 
 class MultiVectorHNSWTest {
 
-    private MultiVectorHNSW<String> index;
+    private Index index;
 
     @BeforeEach
     void setUp() {
-        MultiVectorDistance<FloatVector> distance =
-                new WeightedAverageDistance(
-                        Arrays.asList(new Euclidean(), new Euclidean()), new float[] {0.5f, 0.5f});
         index =
-                new MultiVectorHNSW.Builder<String>(distance)
+                MultiVectorHNSW.builder()
                         .withM(10)
                         .withEfConstruction(100)
+                        .withWeightedAverageDistance()
+                        .addDistance(new Euclidean(), 0.5f)
+                        .addDistance(new Cosine(), 0.5f)
+                        .and()
                         .build();
     }
 
     @Test
     void testAddAndGet() {
-        FloatVector vector1 = FloatVector.of(1.0f, 2.0f, 3.0f);
-        FloatVector vector2 = FloatVector.of(4.0f, 5.0f, 6.0f);
-        List<FloatVector> vectors = Arrays.asList(vector1, vector2);
-
         long id = 123L;
-        String payload = "test payload";
-        TestItem item = new TestItem(id, vectors, payload);
-        index.add(item);
+        List<FloatVector> vectors =
+                List.of(FloatVector.of(1.0f, 2.0f, 3.0f), FloatVector.of(4.0f, 5.0f, 6.0f));
+
+        index.add(id, vectors);
 
         assertEquals(1, index.size());
-        Optional<Item<FloatVector, String>> retrievedItem = index.get(id);
-        assertTrue(retrievedItem.isPresent());
-        assertEquals(id, retrievedItem.get().id());
-        assertEquals(vectors, retrievedItem.get().vectors());
-        assertEquals(payload, retrievedItem.get().payload());
+        Optional<List<FloatVector>> retrieved = index.get(id);
+        assertTrue(retrieved.isPresent());
+        assertEquals(vectors, retrieved.get());
     }
 
     @Test
     void testRemove() {
         long id = 123L;
-        FloatVector vector = FloatVector.of(1.0f, 2.0f, 3.0f);
-        TestItem item = new TestItem(id, List.of(vector), "test payload");
-        index.add(item);
+        List<FloatVector> vectors = List.of(FloatVector.of(1.0f, 2.0f, 3.0f));
+        index.add(id, vectors);
         assertEquals(1, index.size());
 
         boolean removed = index.remove(id);
@@ -72,29 +62,30 @@ class MultiVectorHNSWTest {
 
     @Test
     void testSearch() {
-        FloatVector v1a = FloatVector.of(1.0f, 1.0f, 1.0f);
-        FloatVector v1b = FloatVector.of(1.0f, 1.0f, 1.0f);
-        index.add(new TestItem(1, Arrays.asList(v1a, v1b), "item 1"));
+        long id1 = 1L;
+        List<FloatVector> vectors1 =
+                List.of(FloatVector.of(1.0f, 1.0f), FloatVector.of(1.0f, 0.0f));
+        index.add(id1, vectors1);
 
-        FloatVector v2a = FloatVector.of(10.0f, 10.0f, 10.0f);
-        FloatVector v2b = FloatVector.of(10.0f, 10.0f, 10.0f);
-        index.add(new TestItem(2, Arrays.asList(v2a, v2b), "item 2"));
+        long id2 = 2L;
+        List<FloatVector> vectors2 =
+                List.of(FloatVector.of(10.0f, 10.0f), FloatVector.of(0.0f, 1.0f));
+        index.add(id2, vectors2);
 
-        FloatVector queryVector1 = FloatVector.of(1.1f, 1.1f, 1.1f);
-        FloatVector queryVector2 = FloatVector.of(1.1f, 1.1f, 1.1f);
-        List<SearchResult<FloatVector, String>> results =
-                index.search(Arrays.asList(queryVector1, queryVector2), 1);
+        List<FloatVector> queryVectors =
+                List.of(FloatVector.of(1.1f, 1.1f), FloatVector.of(0.9f, 0.1f));
+        List<SearchResult> results = index.search(queryVectors, 1);
 
         assertEquals(1, results.size());
-        assertEquals(1, results.get(0).item().id());
+        assertEquals(id1, results.get(0).id());
     }
 
     @Test
     void testSaveAndLoad(@TempDir File tempDir) throws IOException, ClassNotFoundException {
         for (long i = 1; i <= 50; i++) {
-            FloatVector vector1 = FloatVector.of(i, i + 1, i + 2);
-            FloatVector vector2 = FloatVector.of(i + 3, i + 4, i + 5);
-            index.add(new TestItem(i, Arrays.asList(vector1, vector2), "payload " + i));
+            List<FloatVector> vectors =
+                    List.of(FloatVector.of(i, i + 1, i + 2), FloatVector.of(i + 3, i + 4, i + 5));
+            index.add(i, vectors);
         }
         assertEquals(50, index.size());
 
@@ -102,24 +93,17 @@ class MultiVectorHNSWTest {
         index.save(indexPath.toPath());
         assertTrue(Files.exists(indexPath.toPath()));
 
-        MultiVectorHNSW<String> loadedIndex = MultiVectorHNSW.load(indexPath.toPath());
+        Index loadedIndex = MultiVectorHNSW.load(indexPath.toPath());
         assertEquals(50, loadedIndex.size());
 
-        Optional<Item<FloatVector, String>> item = loadedIndex.get(25L);
-        assertTrue(item.isPresent());
-        assertEquals("payload 25", item.get().payload());
+        Optional<List<FloatVector>> vectors = loadedIndex.get(25L);
+        assertTrue(vectors.isPresent());
+        assertEquals(FloatVector.of(25f, 26f, 27f), vectors.get().get(0));
 
-        // Verify search works on loaded index
-        List<SearchResult<FloatVector, String>> results =
+        List<SearchResult> results =
                 loadedIndex.search(
                         List.of(FloatVector.of(25f, 26f, 27f), FloatVector.of(28f, 29f, 30f)), 1);
         assertEquals(1, results.size());
-        assertEquals(25L, results.get(0).item().id());
-    }
-
-    /** A simple implementation of the Item interface for testing purposes. */
-    private record TestItem(long id, List<FloatVector> vectors, String payload)
-            implements Item<FloatVector, String>, Serializable {
-        @Serial private static final long serialVersionUID = 1L;
+        assertEquals(25L, results.get(0).id());
     }
 }
